# aprendizaje-TP-Final

./: LICENSE  Makefile  README.md  pyproject.toml
Aprendizaje/: __init__.py  dataset.py  features.py  plots.py
Aprendizaje/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: proyecto_produccion_agua.ipynb
references/: link_video
