[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Aprendizaje"
version = "0.0.1"
description = "Proyecto en donde se busca desarrollar un modelo de Aprendizaje Automatico que sea capaz de predecir la produccion de agua en funcion de diferentes escenarios. Y asi poder anticipar la produccion del agua y si va alcanzar respecto al consumo o no."
authors = [
  { name = "Valeria Commatteo" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["Aprendizaje"]
force_sort_within_sections = true
